--- a/index.css
+++ b/index.css
@@ -1,3 +1,6 @@
 body{
-    background-color: red;
+    background-image: url(./assets/thoughts-background.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    text-align: center;
 }
